@@ -1,5 +1,3 @@
-DIST clementine-1.0.0rc1.tar.gz 8205324 RMD160 12d027b72189345d1cea1d5d8e5032b0ba940451 SHA1 ca09b5a7f1ac7207daedfb68d340e37ef65f81c5 SHA256 ef3bba78c8f304bf615fceb29c174bb644a0b2895f8555132dd33ce9ef3a2c3a
-EBUILD clementine-1.0.0_rc1.ebuild 3736 RMD160 7723d050d8a95cd74fb10e988cac369d0353b89f SHA1 21e80d604dc05dc419eb894af6d0f8cfefef1b64 SHA256 53b98722de972e1b135a8406afcf204e74c9ec22104a9fb91d32b3960ba12b2e
-EBUILD clementine-9999.ebuild 3685 RMD160 d0395f9fa9b4b95a302c4ad423a9c77fa035571f SHA1 26a66c62226fbb7a8c6d2529437f0648a76d6758 SHA256 7c58194ce22a960141257415bb515f8b632474846814cd7383896274e38ff437
-MISC ChangeLog 4575 RMD160 b795845e8254e98ee00f8b8644c324baa5de26fa SHA1 1119bc37383fd726748ec1c54bc4bcb766e65126 SHA256 6f15ebedb8520c8393ec6b5397f38f1243f334e997a3018b837ee440c13a345a
+EBUILD clementine-9999.ebuild 3648 RMD160 a6894d4e121d921772035eb3cd09d5bf83967fe5 SHA1 eac16a9d0d391d9f8620ec7edd769119af953751 SHA256 78653975535b534f913af66f34f0feb25823be301d1a0870fe4c0ad82eb2cc6c
+MISC ChangeLog 4709 RMD160 5d3964edaa987a7b52ddbd1462a7315bdc010502 SHA1 09e4021fc7e0ea3cefb4bcd768fc2c43247b1f3f SHA256 576a4cbed76eec8e07ed93d1a76dd5c6d6b260d44e6f39db63ea688096196863
 MISC metadata.xml 924 RMD160 e57b4eb542a62d47ab4747c0542db29a9c5b08bc SHA1 0cd0ae541f2ac4483165db93581decb1b42ff669 SHA256 6d7cf7d0e2837935ab904b56339c14f25023c7628020bcdbf5ee93b04b1d398f
