@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/clementine
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  05 Jan 2012; Nikoli <nikoli@lavabit.com> -clementine-1.0.0_rc1.ebuild,
+  clementine-9999.ebuild:
+  update deps, gio works fine now
 
   05 Dec 2011; Nikoli <nikoli@lavabit.com> clementine-1.0.0_rc1.ebuild,
   clementine-9999.ebuild:
